feat(api): dependent_root and block_root params for duties and committees
